Revise terms page with updated content and structure

--- a/terms.html
+++ b/terms.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Pragyanpath</title>
-    <link rel="stylesheet" href="style.css"> <!-- agar CSS file hai -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Terms & Conditions - PragyanPath</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Pragyanpath</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="privacy.html">Privacy Policy</a>
-        </nav>
-    </header>
-    <main>
-        <h2>Terms of Service</h2>
-        <p>Yahan pe aapke app ke terms aur rules mention karenge, jaise:</p>
-        <ul>
-            <li>App ka use kaise kare</li>
-            <li>User responsibilities</li>
-            <li>Content guidelines</li>
-            <li>Disclaimers</li>
-            <li>Limitation of liability</li>
-        </ul>
-    </main>
-    <footer>
-        <p>&copy; 2026 Pragyanpath. All rights reserved.</p>
-    </footer>
+  <header class="navbar">
+    <div class="logo">PragyanPath</div>
+  </header>
+
+  <main class="content">
+    <h1>Terms & Conditions</h1>
+    <p>By using PragyanPath, you agree to these terms and conditions.</p>
+
+    <h2>Usage</h2>
+    <p>The app is intended for educational purposes only. Do not misuse the content or app features.</p>
+
+    <h2>Content Ownership</h2>
+    <p>All content is created and owned by PragyanPath. Copying or redistributing without permission is prohibited.</p>
+
+    <h2>Liability</h2>
+    <p>PragyanPath is not responsible for any indirect, incidental, or misuse of app content by users.</p>
+
+    <h2>Updates</h2>
+    <p>We may update features, content, or policies from time to time. Users are advised to check updates periodically.</p>
+  </main>
+
+  <footer class="footer">
+    <a href="index.html">Home</a> |
+    <a href="privacy-policy.html">Privacy Policy</a> |
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a>
+    <p>© 2026 PragyanPath</p>
+  </footer>
 </body>
 </html>
